--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
 
 /* Component Imports */
 @import url('./components/streaming-indicators.css');
+@import url('./modules/settings-manager.css');
 
 :root {
     --primary-blue: #1e3a8a;
